--- a/activities.html
+++ b/activities.html
@@ -20,7 +20,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                 
       </button>
-		<a class="navbar-brand" href="#">Midland Farm Park - Home</a>
+		<a class="navbar-brand" href="#">Midland Farm Park - Activities</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -42,27 +42,30 @@
 </div>
 </div>
 
-<h2>Who are we?</h2>
-  <p1>Midland Farm Park is a small farm attraction with a petting zoo, play park, cafe, shop and some walks. The perfect place for a day trip!</p1>
+<h2>Petting Zoo</h2>
+  <p1>You can find a petting zoo within Midland Farm Park where you can see and feed the animals!</p1>
 
   <br>
   <br>
 
-  <p2>Midland Farm Park is fantastic for families or anyone enthusiastic about farm life or gardening with our range of activities and produce</p2>
+  <h3>Play Park and walks</h3>
+  <p2>We also have a play park where the kids can go or there are some walks around the farm you can take.</p2>
 
-  <div>
+  <h3>Cafe</h3>
+  <p3>Feeling a bit pekish? Thankfully there is also a cafe at the farm park where you can good food and drink!</p3>
+
+  <h4>Produce Shop</h4>
+  <p4>Here at Midland Farm Park, we also grow our own produce and plants which can be purchased in our shop.</p4>
+
+    <div>
 <div style="float: centre">
-<img src="zoo.jpg" width="750px" height="500px" 
-  alt="zoo" class="center">
+<img src="playpark.jpg" width="750px" height="500px" 
+  alt="playpark" class="center">
   
-</div>
-<div>
-
   <footer>
     <p>07123 45678</p>
     <p>Mildlandfarmpark@gmail.com</p>
   </footer>
-
   
  </body>
 </html>
