--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                 
       </button>
-		<a class="navbar-brand" href="#">Midland Farm Park - Home</a>
+		<a class="navbar-brand" href="#">Midland Farm Park - Contact</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -42,27 +42,32 @@
 </div>
 </div>
 
-<h2>Who are we?</h2>
-  <p1>Midland Farm Park is a small farm attraction with a petting zoo, play park, cafe, shop and some walks. The perfect place for a day trip!</p1>
+<h2>Location</h2>
+  <p1>We can be found at (...)</p1>
 
   <br>
   <br>
 
-  <p2>Midland Farm Park is fantastic for families or anyone enthusiastic about farm life or gardening with our range of activities and produce</p2>
-
-  <div>
-<div style="float: centre">
-<img src="zoo.jpg" width="750px" height="500px" 
-  alt="zoo" class="center">
+  <h2>Contact Number</h2>
+  <p2>07123 45678</p2>
   
-</div>
-<div>
+  <br>
+  <br>
 
+  <h2>Email</h2>
+  <p>Midlandfarmpark@gmail.com</p>
+
+
+    <div>
+<div style="float: centre">
+<img src=".jpg" width="750px" height="500px" 
+  alt="" class="center">
+  <p>(image of location on map)</p>
+  
   <footer>
     <p>07123 45678</p>
     <p>Mildlandfarmpark@gmail.com</p>
   </footer>
-
   
  </body>
 </html>
