--- a/produce.html
+++ b/produce.html
@@ -20,7 +20,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                 
       </button>
-		<a class="navbar-brand" href="#">Midland Farm Park - Home</a>
+		<a class="navbar-brand" href="#">Midland Farm Park - Produce</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -42,27 +42,34 @@
 </div>
 </div>
 
-<h2>Who are we?</h2>
-  <p1>Midland Farm Park is a small farm attraction with a petting zoo, play park, cafe, shop and some walks. The perfect place for a day trip!</p1>
+<h2>Produce</h2>
+  <p1>Our farm produce and plants can be bought from the store.</p1>
 
-  <br>
-  <br>
+  <table>
+  <tr>
+    <th>Produce</th>
+    <th>Price</th>
+  </tr>
+  <tr>
+    <td>*blank*</td>
+    <td>*blank*</td>
+  </tr>
+  <tr>
+    <td>*blank*</td>
+    <td>*blank*</td>
+  </tr>
+</table>
 
-  <p2>Midland Farm Park is fantastic for families or anyone enthusiastic about farm life or gardening with our range of activities and produce</p2>
 
-  <div>
+    <div>
 <div style="float: centre">
-<img src="zoo.jpg" width="750px" height="500px" 
-  alt="zoo" class="center">
-  
-</div>
-<div>
+<img src="shop.jpg" width="750px" height="500px" 
+  alt="shop" class="center">
 
   <footer>
     <p>07123 45678</p>
     <p>Mildlandfarmpark@gmail.com</p>
   </footer>
-
   
  </body>
 </html>
